previous match and matchcard icons & text align fixed

--- a/src/components/MatchCard/MatchCard.module.scss
+++ b/src/components/MatchCard/MatchCard.module.scss
@@ -43,8 +43,9 @@
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
-  text-overflow: ellipsis;
+  text-align: center;
   gap: 5px;
+  margin-bottom: auto;
   width: calc(50% - 41px);
   
 
@@ -59,7 +60,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
+  margin-bottom: auto;
   gap: 5px;
   width: calc(50% - 41px);
 
