--- a/src/components/PreviousMatch/PreviousMatch.module.scss
+++ b/src/components/PreviousMatch/PreviousMatch.module.scss
@@ -62,6 +62,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: auto;
   text-overflow: ellipsis;
   gap: 5px;
   width: calc(50% - 20px);
@@ -80,7 +81,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
+  margin-bottom: auto;
   gap: 5px;
   width: calc(50% - 20px);
 
